# cute-sway-recorder

./: .gitignore  Justfile  README.md  README.org  cute-sway-recorder.desktop  cute-wayland-recorder.desktop  flake.nix  justfile  main.py  pyproject.toml
cute_sway_recorder/: common.py  config_area.py  config_file.py  group_file_dest.py  group_selection.py  groupbox_file_dest.py  groupbox_selection.py  main.py  screen_selection.py  select_screen.py
cute_wayland_recorder/: main.py
