[tool.poetry]
name = "cute-sway-recorder"
version = "0.1.0"
description = "A small graphical screen recorder for wl-roots, leveraging wf-recorder and slurp"
authors = ["Maor Kadosh <qoev@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
PySide6 = "6.*"
python = ">=3.6, <3.10" # PySide6 requirements

[tool.poetry.scripts]
cute-sway-recorder = "cute_sway_recorder.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
