[tool.poetry]
name = "cute-sway-recorder"
version = "0.1.11"
description = "A small graphical screen recorder for wl-roots, leveraging wf-recorder and slurp"
authors = ["Maor Kadosh <pypi@avocadosh.xyz>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/it-is-wednesday/cute-sway-recorder"
repository = "https://github.com/it-is-wednesday/cute-sway-recorder"
readme = "README.md"

[tool.poetry.dependencies]
PySide6 = "6.*"
python = ">=3.8,<3.13" # PySide6 requirements

[tool.poetry.scripts]
cute-sway-recorder = "cute_sway_recorder.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

